--- a/assets/stylesheet/homepage.css
+++ b/assets/stylesheet/homepage.css
@@ -9,7 +9,8 @@
 
 .upper-title {
   font-family: sans-serif;
-  margin-bottom: 0px; 
+  margin-bottom: 0px;
+  margin-top: -5px;
 }
 
 .lower-title {
@@ -35,14 +36,44 @@
 .menu ul {
   list-style-type: none;
   background-color: #132034;
-  height: 50px;
 }
 
 .menu ul li {
   display: inline-block;
   padding: 15px 10px;
+  font-size: 18px;
+  font-weight: 300;
 }
 
 .delimiter-slash {
+  color: #ffc100;
+}
+
+#upcoming-samagams {
+  height: 50px;
+  width: 160px;
+  background: url(../icons-08.png) -417px -18px;
+}
+
+#dodra-radio {
+  height: 50px;
+  width: 160px;
+  background: url(../icons-08.png) -203px -13px;
+  margin: auto;
+}
+
+#samagams {
+  list-style-type: none;
+  padding-left: 10px;
+  border-left: solid 1px white;
+  margin-left: 1px;
+}
+
+.samagam {
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.dates {
   color: #ffc100;
 }
